Fixed the broken fade-in fade-out animation when the visibility is toggled.

--- a/src/components/Root/Root.css
+++ b/src/components/Root/Root.css
@@ -10,7 +10,7 @@ input {
 
 .container {
   position: fixed;
-  z-index: 999;
+  z-index: 2147483647;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -18,7 +18,7 @@ input {
   justify-content: center;
   background-color: transparent;
   transition-property: background-color visibility;
-  transition-duration: 0.1s;
+  transition-duration: 0.2s;
   transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 
   &.visible {
@@ -41,10 +41,10 @@ input {
     border: 1px solid lightgray;
     background-color: #ffffff;
     padding: 12px;
-    opacity: 0.25;
-    transform: scale(0.98);
+    opacity: 0;
+    transform: scale(0.95);
     transition-property: opacity, transform;
-    transition-duration: 0.1s;
+    transition-duration: 0.2s;
     transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
 
     .input-container {
